<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.shane.final_project.Stopwatch">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/stopwatchLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:src="@drawable/blackboard"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/blackboardBackground"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <Button
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="startClick"
                android:text="@string/startTxt"
                android:id="@+id/startButton"/>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/timerArea">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="60sp"
                    android:text="@string/timer"
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/timer"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/stopTxt"
                    android:onClick="stopClick"
                    android:id="@+id/stopButton"
                    android:visibility="gone"
                    android:background="@android:color/holo_red_light"
                    android:textColor="@android:color/background_dark" />


                <Button
                    android:layout_marginRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimaryDark"
                    android:text="@string/resetTxt"
                    android:onClick="resetClick"
                    android:id="@+id/resetButton"
                    android:textColor="@android:color/holo_orange_light" />

            </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/backGroundText"
                    android:text="@string/backGroundTxt"
                    android:textColor="@android:color/darker_gray" />



        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
